Added submit message button.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,6 +18,9 @@
         </ul>
         <% }) %>
       </div>
+      <button class="submitMsg">
+        <a href="new">Submit your message!</a>
+      </button>
     </main>
   </body>
 </html>
