--- a/views/form.ejs
+++ b/views/form.ejs
@@ -4,18 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Add new message</title>
-    <link rel="stylesheet" href="/styles.css" />
+    <link rel="stylesheet" href="/newMsgForm.css" />
   </head>
   <body>
-    <form method="POST" action="/new">
+    <form method="POST" action="/new" id="submitMsgForm">
       <h1>Submit Your Message!</h1>
-      <label for="name">
-        <input type="text" id="name" name="name" placeholder="John Doe" />
-      </label>
-      <label for="message">
-        <input id="message" name="message" placeholder="Hell world!" />
-      </label>
-      <button type="submit">Submit your message</button>
+
+      <label for="name"> <strong>Name:</strong> </label>
+      <input type="text" id="name" name="name" placeholder="John Doe" />
+
+      <label for="message"> <strong>Message:</strong> </label>
+      <input id="message" name="message" placeholder="Hello world!" />
+
+      <button type="submit">Submit</button>
     </form>
   </body>
 </html>
