--- a/public/index.css
+++ b/public/index.css
@@ -28,6 +28,8 @@ div {
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
+  width: 100%;
+  align-items: center;
 }
 
 p:not(p:nth-child(3)) {
@@ -65,9 +67,9 @@ p > span {
   background-color: white;
   border-radius: 0.5rem;
   transition: 0.3s;
-  width: 35vw;
   color: black;
   text-decoration: none;
+  width: clamp(20rem, 35%, 50%);
 }
 
 .userDetails:hover {
