Updated message view.

--- a/views/message.ejs
+++ b/views/message.ejs
@@ -10,8 +10,8 @@
     <main>
       <h1 class="title"><%= title %></h1>
       <div class="userDetails">
-        <h2><%= message.user %></h2>
-        <p>Message: <span><%= message.text %></span></p>
+        <h2><%= message.user %>'s message</h2>
+        <p><%= message.text %></p>
         <p>Date added: <span><%= message.added %></span></p>
       </div>
       <a class="homeBtn" href="/">Home</a>
