Re-factored a tag into its own view / component.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,7 @@
         </a>
         <% }) %>
       </div>
-      <a class="submitMsg" href="new">Submit your message!</a>
+      <%- include('navBtns', { button: button }) %>
     </main>
   </body>
 </html>
