--- a/views/message.ejs
+++ b/views/message.ejs
@@ -14,7 +14,7 @@
         <p><%= message.text %></p>
         <p>Date added: <span><%= message.added %></span></p>
       </div>
-      <a class="homeBtn" href="/">Home</a>
+      <%- include('navBtns', {button:button}) %>
     </main>
   </body>
 </html>
