--- a/public/index.css
+++ b/public/index.css
@@ -42,7 +42,8 @@ p > span {
   color: blue;
 }
 
-.submitMsg {
+.submitMsg,
+.navBtn {
   font-size: 1rem;
   font-weight: bold;
   cursor: pointer;
@@ -56,7 +57,8 @@ p > span {
   transition: 0.3s;
 }
 
-.submitMsg:hover {
+.submitMsg:hover,
+.navBtn:hover {
   color: blue;
 }
 
