Added color to submit new message button.

--- a/public/newMsgForm.css
+++ b/public/newMsgForm.css
@@ -42,6 +42,7 @@ body {
   border-bottom-style: inset;
   border-right-style: inset;
   transition: 0.3s;
+  color: black;
 }
 
 #submitMsgForm > button:hover {
